<resources>
    <string name="app_name">Household Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="server_client_id">697149179812-g9bjdpdoo914tnjtl052lu9hufkuqcn5.apps.googleusercontent.com</string>
    <string name="null_string">NULL</string>
    <string name="dummy_email">quad@squad.com</string>
    <string name="create_group">Create Group</string>
    <string name="join">Join</string>
    <string name="dismiss">Dismiss Invite</string>
    <string name="from_dummy">From invite@email.com</string>
    <string name="house_name">House Name</string>
    <string name="lbl_new_group">New Group</string>
    <string name="lbl_group_nme">Group Name</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="group_name">Group Name</string>
    <string name="save">SAVE</string>
    <string name="invite_housemates">Invite Housemates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invites">Invites</string>
    <string name="members">Members</string>
    <string name="test_x_tester">Test X. Tester</string>
    <string name="do_this">Do this.</string>
    <string name="due_by">Due by:</string>
    <string name="task">Task</string>
    <string name="assigned_to">Assigned To</string>
    <string name="due_by_2">Due By</string>
    <string name="at">At</string>
    <string name="assign">Assign</string>
    <string name="corkboard_message_dummy">Test Message</string>
    <string name="from_dummy_name">Test McTester</string>
    <string name="delete_corkboard_card">Delete Note</string>

    <string name="location_toggle">Change Current Location</string>
    <string name="about">About</string>
    <string name="abouttxt">About</string>
    <string name="quadsquad">QuadSquad</string>
    <string name="names1">Michael Currie, Luke Currie,</string>
    <string name="names2">Catherine Cross, Devon White</string>
    <string name="n_n_nlibraries_used">\n\n\nLibraries Used:</string>
    <string name="firebase_ui">Firebase-UI</string>
    <string name="picasso">Picasso</string>
    <string name="google_play_services">Google Play Services</string>
</resources>
