<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.augustana.quadsquad.householdmanager.GroupManagementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/invite_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/invite_housemates"
            android:textSize="14sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/members"
                android:textSize="16sp" />

            <ScrollView
                android:id="@+id/membersScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.v7.widget.ListViewCompat
                    android:id="@+id/members_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.v7.widget.ListViewCompat>
            </ScrollView>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invites"
                android:textSize="16sp" />

            <ScrollView
                android:id="@+id/invitesScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.v7.widget.ListViewCompat
                    android:id="@+id/invites_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.v7.widget.ListViewCompat>
            </ScrollView>
        </android.support.v7.widget.LinearLayoutCompat>
    </LinearLayout>

</RelativeLayout>
