<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp"
    android:layout_marginBottom="16dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/corkboard_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/corkboard_message_dummy"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCorkboardFromName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/corkboard_message"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/from_dummy_name"
            android:textSize="14sp" />

        <!--<Button-->
            <!--android:id="@+id/join_button"-->
            <!--style="?android:attr/borderlessButtonStyle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="36dp"-->
            <!--android:layout_below="@+id/txtName"-->
            <!--android:background="@android:color/background_light"-->
            <!--android:elevation="0dp"-->
            <!--android:paddingEnd="16dp"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp"-->
            <!--android:paddingStart="16dp"-->
            <!--android:text="@string/join" />-->

        <Button
            android:id="@+id/corkboard_delete_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/txtCorkboardFromName"
            android:background="@android:color/background_light"
            android:elevation="0dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:text="@string/delete_corkboard_card" />

        <!--<ImageView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:src="@drawable/blank_conact" />-->


    </RelativeLayout>

</android.support.v7.widget.CardView>